feat: update API resource for displaying color category
