# app/Http/Resources/CategoryResource.php
@@ -13,9 +13,11 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *     properties={
  *         @OA\Property(property="id_pemberitahuan_category", type="integer"),
  *         @OA\Property(property="nama", type="string"),
+ *         @OA\Property(property="color", type="string"),
  *         @OA\Property(property="tipe", type="object",
  *             @OA\Property(property="id", type="integer"),
- *             @OA\Property(property="nama", type="string")
+ *             @OA\Property(property="nama", type="string"),
+ *             @OA\Property(property="color", type="string"),
  *         )
  *     }
  * )
@@ -32,6 +34,7 @@ class CategoryResource extends JsonResource
         return [
             'id_pemberitahuan_category' => $this->id_pemberitahuan_category,
             'nama' => $this->pemberitahuan_category_name,
+            'color' => $this->pemberitahuan_category_color,
             'tipe' => $this->tipe ? [
                 'id' => $this->tipe->id_pemberitahuan_type,
                 'nama' => $this->tipe->pemberitahuan_type_name,
